--- a/gallery.html
+++ b/gallery.html
@@ -136,8 +136,8 @@
                     <div class="container">
                         <div class="row justify-content-start">
                             <div class="col-10 col-lg-8">
-                                <h1 class="display-1 text-white animated slideInDown" style="margin-top:100px !important">Custom Furniture & Designs</h1>
-                                <p class="fs-5 fw-medium text-white mb-4 pb-3">Your perfect blend of style and comfort awaits.
+                                <h1 class="display-1 text-white animated slideInDown" style="margin-top:100px !important">Transforming Spaces, Elevating Lives</h1>
+                                <p class="fs-5 fw-medium text-white mb-4 pb-3">Bring your own Dreams into your own Rooms.
                                 </p>
                                 <a href="" class="btn btn-primary py-3 px-5 animated slideInLeft">Read More</a>
                             </div>
@@ -151,7 +151,7 @@
                     <div class="container">
                         <div class="row justify-content-start">
                             <div class="col-10 col-lg-8">
-                                <h1 class="display-1 text-white animated slideInDown" style="margin-top:100px !important">Custom Furniture & Designs</h1>
+                                <h1 class="display-1 text-white animated slideInDown" style="margin-top:100px !important">Designing Dreams, Crafting Reality</h1>
                                 <p class="fs-5 fw-medium text-white mb-4 pb-3">Your perfect blend of style and comfort awaits.
                                 </p>
                                 <a href="" class="btn btn-primary py-3 px-5 animated slideInLeft">Read More</a>
@@ -236,7 +236,7 @@
                 <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
                     <div class="team-item position-relative">
                         <div class="position-relative">
-                            <img class="img-fluid" src="img/bedRoom/M.Bedroom view 3 .jpg" alt="">
+                            <img class="img-fluid" src="img/bedRoom/Master bed View 3.jpg" alt="">
                             <!-- <div class="team-social text-center">
                                 <a class="btn btn-square" href=""><i class="fab fa-facebook-f"></i></a>
                                 <a class="btn btn-square" href=""><i class="fab fa-twitter"></i></a>
@@ -416,22 +416,22 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
+                <!-- <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
                     <div class="team-item position-relative">
                         <div class="position-relative">
                             <img class="img-fluid" src="img/HOTEL & RESTAURANT/HOTEL & RESTAURANT/Restrnt 2.jpg" alt="">
-                            <!-- <div class="team-social text-center">
+                            <div class="team-social text-center">
                                 <a class="btn btn-square" href=""><i class="fab fa-facebook-f"></i></a>
                                 <a class="btn btn-square" href=""><i class="fab fa-twitter"></i></a>
                                 <a class="btn btn-square" href=""><i class="fab fa-instagram"></i></a>
-                            </div> -->
+                            </div>
                         </div>
                         <div class="bg-light text-center p-4">
                             <h3 class="mt-2">RECEPTION</h3>
-                            <!-- <span class="text-primary">Designation</span> -->
+                            <span class="text-primary">Designation</span>
                         </div>
                     </div>
-                </div>
+                </div> -->
                 <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
                     <div class="team-item position-relative">
                         <div class="position-relative">
