--- a/index.html
+++ b/index.html
@@ -131,8 +131,8 @@
                     <div class="container">
                         <div class="row justify-content-start">
                             <div class="col-10 col-lg-8">
-                                <h1 class="display-1 text-white animated slideInDown" style="margin-top:100px !important">Custom Furniture & Designs</h1>
-                                <p class="fs-5 fw-medium text-white mb-4 pb-3">Your perfect blend of style and comfort awaits.
+                                <h1 class="display-1 text-white animated slideInDown" style="margin-top:100px !important">Transforming Spaces, Elevating Lives</h1>
+                                <p class="fs-5 fw-medium text-white mb-4 pb-3">Bring your own Dreams into your own Rooms.
                                 </p>
                                 <a href="" class="btn btn-primary py-3 px-5 animated slideInLeft">Read More</a>
                             </div>
