--- a/gallery.html
+++ b/gallery.html
@@ -107,13 +107,13 @@
             </div> -->
         </div>
         <a href="index.html" class="navbar-brand mx-auto d-none d-lg-block">
-            <h1 class="text-info" style="font-family:'Times New Roman', Times, serif;"><img src="/img/agora logo cut.png" alt="" style="height: 80px;width: 100px;"></h1>
+            <h1 class="text-info" style="font-family:'Times New Roman', Times, serif;"><img src="img/agora logo cut.png" alt="" style="height: 80px;width: 100px;"></h1>
                  <!-- <h1 class="text-info m-0" style="font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif !important;">AGORA INTERIOR</h1> -->
              </a>
         <!-- Logo for mobile view, shown in the center -->
         <a href="index.html" class="navbar-brand mx-auto d-lg-none">
 
-            <h1 class="text-info" style="font-family"><img src="/img/agora logo cut.png" alt="" style="height:40px;width:80px;"></h1>
+            <h1 class="text-info" style="font-family"><img src="img/agora logo cut.png" alt="" style="height:40px;width:80px;"></h1>
             <!-- <h1 class="text-info m-0" style="font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif !important;">AGORA INTERIOR</h1> -->
         </a>
         </a>
