--- a/gallery.html
+++ b/gallery.html
@@ -166,7 +166,7 @@
                     <div class="container">
                         <div class="row justify-content-start">
                             <div class="col-10 col-lg-8">
-                                <h1 class="display-1 text-white animated slideInDown" style="margin-top:100px !important">Turn Ideas Into Reality</h1>
+                                <h1 class="display-1 text-white animated slideInDown" style="margin-top:100px !important">Turn Ideas Into <br> Reality</h1>
                                 <p class="fs-5 fw-medium text-white mb-4 pb-3">Transform your space with our professional touch.
                                     .</p>
                                 <a href="" class="btn btn-primary py-3 px-5 animated slideInLeft">Read More</a>
