--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
                     <div class="container">
                         <div class="row justify-content-start">
                             <div class="col-10 col-lg-8">
-                                <h1 class="display-1 text-white animated slideInDown" style="margin-top:100px !important">Turn Ideas Into Reality</h1>
+                                <h1 class="display-1 text-white animated slideInDown" style="margin-top:100px !important">Turn Ideas Into <br> Reality</h1>
                                 <p class="fs-5 fw-medium text-white mb-4 pb-3">Transform your space with our professional touch.
                                     .</p>
                                 <a href="" class="btn btn-primary py-3 px-5 animated slideInLeft">Read More</a>
@@ -245,7 +245,9 @@
                             <h3 class="mb-0">Experience</h3>
                         </div>
                     </div>
-                    <a class="btn btn-primary py-3 px-5" href="">Explore More</a>
+                    <a class="btn btn-primary py-3 px-5" href="folder/AGORA INTERIORS.pdf" download="AGORAINTERIORS.pdf">Downloard Brochure</a>
+                    <a class="btn btn-warning py-3 px-5" href="folder/Agora Interior Company Business Profile _compressed (1).pdf" download="BusinessProfile.pdf">Downloard Business Profile</a>
+
                 </div>
             </div>
         </div>
